objects/SFRelease__Code_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>SFRelease__Apex_Class_Trigger_Name__c</fullName>
        <label>Apex Class / Trigger Name</label>
        <referenceTo>SFRelease__Apex_Class_Trigger__c</referenceTo>
        <relationshipLabel>Code Coverages</relationshipLabel>
        <relationshipName>Code_Coverages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFRelease__Org__c</fullName>
        <label>Org</label>
        <referenceTo>SFRelease__Org__c</referenceTo>
        <relationshipLabel>Code Coverages</relationshipLabel>
        <relationshipName>Code_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFRelease__Total_Code_Coverage__c</fullName>
        <label>Total Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Code Coverage</label>
    <listViews>
        <fullName>SFRelease__All</fullName>
        <columns>NAME</columns>
        <columns>SFRelease__Total_Code_Coverage__c</columns>
        <columns>SFRelease__Org__c</columns>
        <columns>SFRelease__Apex_Class_Trigger_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Code Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>